--- a/src/popup/vault/current-tab.component.html
+++ b/src/popup/vault/current-tab.component.html
@@ -1,4 +1,4 @@
-<header>
+<header appArrowNav (navDown)="navDown()" (navUp)="navUp()">
     <div class="left">
         <app-pop-out [show]="!inSidebar"></app-pop-out>
         <button type="button" appBlurClick (click)="refresh()" appA11yTitle="{{'refresh' | i18n}}" *ngIf="inSidebar">
@@ -16,7 +16,7 @@
         </button>
     </div>
 </header>
-<content>
+<content appArrowNav (navDown)="navDown()" (navUp)="navUp()">
     <div class="no-items" *ngIf="!loaded">
         <i class="fa fa-spinner fa-spin fa-3x" aria-hidden="true"></i>
     </div>
@@ -29,7 +29,8 @@
             <div class="box-content">
                 <app-cipher-row *ngFor="let loginCipher of loginCiphers" [cipher]="loginCipher" 
                     title="{{'autoFill' | i18n}}" [showView]="true" (onSelected)="fillCipher($event)" 
-                    (onView)="viewCipher($event)">
+                    (onView)="viewCipher($event)" appFocus
+                    [focus]="navType === 'typeLogins' && loginCiphers[navIndex] === loginCipher">
                 </app-cipher-row>
                 <div class="box-content-row padded no-hover" *ngIf="!loginCiphers.length">
                     <p class="text-center">{{'autoFillInfo' | i18n}}</p>
@@ -46,7 +47,9 @@
             </div>
             <div class="box-content">
                 <app-cipher-row *ngFor="let cardCipher of cardCiphers" [cipher]="cardCipher" title="{{'autoFill' | i18n}}" [showView]="true"
-                    (onSelected)="fillCipher($event)" (onView)="viewCipher($event)"></app-cipher-row>
+                    (onSelected)="fillCipher($event)" (onView)="viewCipher($event)" appFocus
+                    [focus]="navType === 'cards' && cardCiphers[navIndex] === cardCipher">
+                </app-cipher-row>
             </div>
         </div>
         <div class="box list" *ngIf="identityCiphers && identityCiphers.length">
@@ -56,7 +59,9 @@
             </div>
             <div class="box-content">
                 <app-cipher-row *ngFor="let identityCipher of identityCiphers" [cipher]="identityCipher" title="{{'autoFill' | i18n}}" [showView]="true"
-                    (onSelected)="fillCipher($event)" (onView)="viewCipher($event)"></app-cipher-row>
+                    (onSelected)="fillCipher($event)" (onView)="viewCipher($event)" appFocus
+                    [focus]="navType === 'identities' && identityCiphers[navIndex] === identityCipher">
+                </app-cipher-row>
             </div>
         </div>
     </ng-container>
