--- a/src/popup/vault/groupings.component.html
+++ b/src/popup/vault/groupings.component.html
@@ -1,4 +1,4 @@
-<header>
+<header appArrowNav (navDown)="navDown()" (navUp)="navUp()">
     <div class="left">
         <app-pop-out></app-pop-out>
     </div>
@@ -13,7 +13,7 @@
         </button>
     </div>
 </header>
-<content>
+<content appArrowNav (navDown)="navDown()" (navUp)="navUp()">
     <div class="no-items" *ngIf="(!ciphers || !ciphers.length) && !showSearching()">
         <i class="fa fa-spinner fa-spin fa-3x" *ngIf="!loaded"></i>
         <ng-container *ngIf="loaded">
@@ -31,7 +31,9 @@
             <div class="box-content">
                 <app-cipher-row *ngFor="let favoriteCipher of favoriteCiphers" [cipher]="favoriteCipher"
                     title="{{'viewItem' | i18n}}" (onSelected)="selectCipher($event)"
-                    (launchEvent)="launchCipher($event)"></app-cipher-row>
+                    (launchEvent)="launchCipher($event)" appFocus
+                    [focus]="navType === 'favorite' && favoriteCiphers[navIndex] === favoriteCipher">
+                </app-cipher-row>
             </div>
         </div>
         <div class="box list">
@@ -40,7 +42,8 @@
                 <span class="flex-right">4</span>
             </div>
             <div class="box-content single-line">
-                <a href="#" class="box-content-row" appStopClick appBlurClick (click)="selectType(cipherType.Login)">
+                <a href="#" class="box-content-row" appStopClick appBlurClick (click)="selectType(cipherType.Login)"
+                    appFocus [focus]="navType === 'types' && navIndex === 0">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-globe"></i></div>
                         <span class="text">{{'typeLogin' | i18n}}</span>
@@ -48,7 +51,8 @@
                     <span class="row-sub-label">{{typeCounts.get(cipherType.Login) || 0}}</span>
                     <span><i class="fa fa-chevron-right fa-lg row-sub-icon"></i></span>
                 </a>
-                <a href="#" class="box-content-row" appStopClick appBlurClick (click)="selectType(cipherType.Card)">
+                <a href="#" class="box-content-row" appStopClick appBlurClick (click)="selectType(cipherType.Card)"
+                    appFocus [focus]="navType === 'types' && navIndex === 1">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-credit-card"></i></div>
                         <span class="text">{{'typeCard' | i18n}}</span>
@@ -56,7 +60,8 @@
                     <span class="row-sub-label">{{typeCounts.get(cipherType.Card) || 0}}</span>
                     <span><i class="fa fa-chevron-right fa-lg row-sub-icon"></i></span>
                 </a>
-                <a href="#" class="box-content-row" appStopClick appBlurClick (click)="selectType(cipherType.Identity)">
+                <a href="#" class="box-content-row" appStopClick appBlurClick (click)="selectType(cipherType.Identity)"
+                    appFocus [focus]="navType === 'types' && navIndex === 2">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-id-card-o"></i></div>
                         <span class="text">{{'typeIdentity' | i18n}}</span>
@@ -65,7 +70,8 @@
                     <span><i class="fa fa-chevron-right fa-lg row-sub-icon"></i></span>
                 </a>
                 <a href="#" class="box-content-row" appStopClick appBlurClick
-                    (click)="selectType(cipherType.SecureNote)">
+                    (click)="selectType(cipherType.SecureNote)" appFocus
+                    [focus]="navType === 'types' && navIndex === 3">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-sticky-note-o"></i></div>
                         <span class="text">{{'typeSecureNote' | i18n}}</span>
@@ -82,7 +88,8 @@
             </div>
             <div class="box-content single-line">
                 <a *ngFor="let f of nestedFolders" href="#" class="box-content-row" appStopClick appBlurClick
-                    (click)="selectFolder(f.node)">
+                    (click)="selectFolder(f.node)" appFocus
+                    [focus]="navType === 'folders' && nestedFolders[navIndex] === f">
                     <div class="row-main">
                         <div class="icon">
                             <i class="fa fa-fw fa-lg"
@@ -102,7 +109,8 @@
             </div>
             <div class="box-content single-line">
                 <a *ngFor="let nestedCollection of nestedCollections" href="#" class="box-content-row"
-                    appStopClick appBlurClick (click)="selectCollection(nestedCollection.node)">
+                    appStopClick appBlurClick (click)="selectCollection(nestedCollection.node)" appFocus
+                    [focus]="navType === 'collections' && nestedCollections[navIndex] === nestedCollection">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-cube"></i></div>
                         <span class="text">{{nestedCollection.node.name}}</span>
@@ -120,7 +128,9 @@
             <div class="box-content">
                 <app-cipher-row *ngFor="let noFolderCipher of noFolderCiphers" [cipher]="noFolderCipher"
                     title="{{'viewItem' | i18n}}" (onSelected)="selectCipher($event)"
-                    (launchEvent)="launchCipher($event)"></app-cipher-row>
+                    (launchEvent)="launchCipher($event)" appFocus
+                    [focus]="navType === 'noFolder' && noFolderCiphers[navIndex] === noFolderCipher">
+                </app-cipher-row>
             </div>
         </div>
         <div class="box list" *ngIf="deletedCount">
@@ -150,7 +160,9 @@
                 <div class="box-content">
                     <app-cipher-row *cdkVirtualFor="let searchedCipher of ciphers" [cipher]="searchedCipher"
                         title="{{'viewItem' | i18n}}" (onSelected)="selectCipher($event)"
-                        (launchEvent)="launchCipher($event)"></app-cipher-row>
+                        (launchEvent)="launchCipher($event)" appFocus
+                        [focus]="navType === 'search' && ciphers[navIndex] === searchedCipher">
+                    </app-cipher-row>
                 </div>
             </div>
         </cdk-virtual-scroll-viewport>
