--- a/src/popup/vault/ciphers.component.html
+++ b/src/popup/vault/ciphers.component.html
@@ -1,4 +1,4 @@
-<header>
+<header appArrowNav (navDown)="navDown()" (navUp)="navUp()">
     <div class="left">
         <button type="button" appBlurClick (click)="back()">
             <span class="header-icon"><i class="fa fa-chevron-left" aria-hidden="true"></i></span>
@@ -17,7 +17,8 @@
         </button>
     </div>
 </header>
-<content [ngClass]="{'stacked-boxes': showGroupings()}">
+<content [ngClass]="{'stacked-boxes': showGroupings()}"
+    appArrowNav (navDown)="navDown()" (navUp)="navUp()">
     <ng-container *ngIf="showGroupings()">
         <div class="box list" *ngIf="nestedFolders && nestedFolders.length">
             <div class="box-header">
@@ -25,7 +26,8 @@
             </div>
             <div class="box-content single-line">
                 <a *ngFor="let f of nestedFolders" href="#" class="box-content-row" appStopClick appBlurClick
-                    (click)="selectFolder(f.node)">
+                    (click)="selectFolder(f.node)" appFocus
+                    [focus]="navType === 'folders' && nestedFolders[navIndex] === f">
                     <div class="row-main">
                         <div class="icon">
                             <i class="fa fa-fw fa-lg" aria-hidden="true"
@@ -43,7 +45,8 @@
             </div>
             <div class="box-content single-line">
                 <a *ngFor="let c of nestedCollections" href="#" class="box-content-row" appStopClick appBlurClick
-                    (click)="selectCollection(c.node)">
+                    (click)="selectCollection(c.node)" appFocus
+                    [focus]="navType === 'collections' && nestedCollections[navIndex] === c">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-cube" aria-hidden="true"></i></div>
                         <span class="text">{{c.node.name}}</span>
@@ -71,7 +74,9 @@
                 </div>
                 <div class="box-content">
                     <app-cipher-row *cdkVirtualFor="let c of ciphers" [cipher]="c" title="{{'viewItem' | i18n}}"
-                        (onSelected)="selectCipher($event)" (launchEvent)="launchCipher($event)"></app-cipher-row>
+                        (onSelected)="selectCipher($event)" (launchEvent)="launchCipher($event)" appFocus
+                        [focus]="navType === 'ciphers' && ciphers[navIndex] === c">
+                    </app-cipher-row>
                 </div>
             </div>
         </cdk-virtual-scroll-viewport>
