--- a/src/popup/vault/groupings.component.html
+++ b/src/popup/vault/groupings.component.html
@@ -1,4 +1,4 @@
-<header appArrowNav (navDown)="navDown()" (navUp)="navUp()">
+<header appArrowNav (navDown)="navDown()" (navUp)="navUp()" (navReset)="navReset()">
     <div class="left">
         <app-pop-out></app-pop-out>
     </div>
@@ -13,7 +13,7 @@
         </button>
     </div>
 </header>
-<content appArrowNav (navDown)="navDown()" (navUp)="navUp()">
+<content appArrowNav (navDown)="navDown()" (navUp)="navUp()" (navReset)="navReset()">
     <div class="no-items" *ngIf="(!ciphers || !ciphers.length) && !showSearching()">
         <i class="fa fa-spinner fa-spin fa-3x" *ngIf="!loaded"></i>
         <ng-container *ngIf="loaded">
