Add background color on hover of action buttons

--- a/src/popup/scss/box.scss
+++ b/src/popup/scss/box.scss
@@ -422,6 +422,7 @@
             &:hover, &:focus {
                 @include themify($themes) {
                     color: themed('boxRowButtonHoverColor');
+                    background: themed('boxRowButtonHoverBackgroundColor');
                 }
             }
 
