--- a/src/popup/scss/variables.scss
+++ b/src/popup/scss/variables.scss
@@ -84,6 +84,7 @@ $themes: (
         totpStrokeColor: $brand-primary,
         boxRowButtonColor: $brand-primary,
         boxRowButtonHoverColor: darken($brand-primary, 10%),
+        boxRowButtonHoverBackgroundColor: darken($list-item-hover, 3%),
         inputBorderColor: darken($border-color-dark, 7%),
         inputBackgroundColor: #ffffff,
         inputPlaceholderColor: lighten($gray-light, 35%),
@@ -133,6 +134,7 @@ $themes: (
         totpStrokeColor: #cacaca,
         boxRowButtonColor: #cacaca,
         boxRowButtonHoverColor: #ffffff,
+        boxRowButtonHoverBackgroundColor: lighten(#3c3c3c, 5%),
         inputBorderColor: #222222,
         inputBackgroundColor: #363636,
         inputPlaceholderColor: #707070,
@@ -182,6 +184,7 @@ $themes: (
         totpStrokeColor: $nord4,
         boxRowButtonColor: $nord4,
         boxRowButtonHoverColor: $nord6,
+        boxRowButtonHoverBackgroundColor: lighten($nord3, 5%),
         inputBorderColor: $nord0,
         inputBackgroundColor: $nord2,
         inputPlaceholderColor: lighten($nord3, 20%),
@@ -231,6 +234,7 @@ $themes: (
         totpStrokeColor: $solarizedDarkBase0,
         boxRowButtonColor: $solarizedDarkBase0,
         boxRowButtonHoverColor: $solarizedDarkBase2,
+        boxRowButtonHoverBackgroundColor: lighten($solarizedDarkBase02, 5%),
         inputBorderColor: $solarizedDarkBase03,
         inputBackgroundColor: $solarizedDarkBase01,
         inputPlaceholderColor: lighten($solarizedDarkBase00, 20%),
