--- a/src/popup/components/cipher-row.component.html
+++ b/src/popup/components/cipher-row.component.html
@@ -1,6 +1,6 @@
 <a (click)="selectCipher(cipher)" (dblclick)="launchCipher(cipher)" href="#" appStopClick
     title="{{title}} - {{cipher.name}}" class="box-content-row box-content-row-flex" appArrowNav
-    (navRight)="actionButtons.navRight()" (navLeft)="actionButtons.navLeft()">
+    (navRight)="actionButtons.navRight()" (navLeft)="actionButtons.navLeft()" (focus)="actionButtons.navReset()">
     <div class="row-main">
         <app-vault-icon [cipher]="cipher"></app-vault-icon>
         <div class="row-main-content">
