--- a/src/popup/vault/groupings.component.html
+++ b/src/popup/vault/groupings.component.html
@@ -1,4 +1,4 @@
-<header appArrowNav (navDown)="navDown()" (navUp)="navUp()" (navReset)="navReset()">
+<header appArrowNav (navDown)="arrowNav.down()" (navUp)="arrowNav.up()" (navReset)="arrowNav.reset()">
     <div class="left">
         <app-pop-out></app-pop-out>
     </div>
@@ -13,7 +13,7 @@
         </button>
     </div>
 </header>
-<content appArrowNav (navDown)="navDown()" (navUp)="navUp()" (navReset)="navReset()">
+<content appArrowNav (navDown)="arrowNav.down()" (navUp)="arrowNav.up()" (navReset)="arrowNav.reset()">
     <div class="no-items" *ngIf="(!ciphers || !ciphers.length) && !showSearching()">
         <i class="fa fa-spinner fa-spin fa-3x" *ngIf="!loaded"></i>
         <ng-container *ngIf="loaded">
@@ -32,7 +32,7 @@
                 <app-cipher-row *ngFor="let favoriteCipher of favoriteCiphers" [cipher]="favoriteCipher"
                     title="{{'viewItem' | i18n}}" (onSelected)="selectCipher($event)"
                     (launchEvent)="launchCipher($event)" appFocus
-                    [focus]="navType === 'favorite' && favoriteCiphers[navIndex] === favoriteCipher">
+                    [focus]="arrowNav.navType === 'favorite' && favoriteCiphers[arrowNav.navIndex] === favoriteCipher">
                 </app-cipher-row>
             </div>
         </div>
@@ -43,7 +43,7 @@
             </div>
             <div class="box-content single-line">
                 <a href="#" class="box-content-row" appStopClick appBlurClick (click)="selectType(cipherType.Login)"
-                    appFocus [focus]="navType === 'types' && navIndex === 0">
+                    appFocus [focus]="arrowNav.navType === 'types' && arrowNav.navIndex === 0">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-globe"></i></div>
                         <span class="text">{{'typeLogin' | i18n}}</span>
@@ -52,7 +52,7 @@
                     <span><i class="fa fa-chevron-right fa-lg row-sub-icon"></i></span>
                 </a>
                 <a href="#" class="box-content-row" appStopClick appBlurClick (click)="selectType(cipherType.Card)"
-                    appFocus [focus]="navType === 'types' && navIndex === 1">
+                    appFocus [focus]="arrowNav.navType === 'types' && arrowNav.navIndex === 1">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-credit-card"></i></div>
                         <span class="text">{{'typeCard' | i18n}}</span>
@@ -61,7 +61,7 @@
                     <span><i class="fa fa-chevron-right fa-lg row-sub-icon"></i></span>
                 </a>
                 <a href="#" class="box-content-row" appStopClick appBlurClick (click)="selectType(cipherType.Identity)"
-                    appFocus [focus]="navType === 'types' && navIndex === 2">
+                    appFocus [focus]="arrowNav.navType === 'types' && arrowNav.navIndex === 2">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-id-card-o"></i></div>
                         <span class="text">{{'typeIdentity' | i18n}}</span>
@@ -71,7 +71,7 @@
                 </a>
                 <a href="#" class="box-content-row" appStopClick appBlurClick
                     (click)="selectType(cipherType.SecureNote)" appFocus
-                    [focus]="navType === 'types' && navIndex === 3">
+                    [focus]="arrowNav.navType === 'types' && arrowNav.navIndex === 3">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-sticky-note-o"></i></div>
                         <span class="text">{{'typeSecureNote' | i18n}}</span>
@@ -89,7 +89,7 @@
             <div class="box-content single-line">
                 <a *ngFor="let f of nestedFolders" href="#" class="box-content-row" appStopClick appBlurClick
                     (click)="selectFolder(f.node)" appFocus
-                    [focus]="navType === 'folders' && nestedFolders[navIndex] === f">
+                    [focus]="arrowNav.navType === 'folders' && nestedFolders[arrowNav.navIndex] === f">
                     <div class="row-main">
                         <div class="icon">
                             <i class="fa fa-fw fa-lg"
@@ -110,7 +110,7 @@
             <div class="box-content single-line">
                 <a *ngFor="let nestedCollection of nestedCollections" href="#" class="box-content-row"
                     appStopClick appBlurClick (click)="selectCollection(nestedCollection.node)" appFocus
-                    [focus]="navType === 'collections' && nestedCollections[navIndex] === nestedCollection">
+                    [focus]="arrowNav.navType === 'collections' && nestedCollections[arrowNav.navIndex] === nestedCollection">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-cube"></i></div>
                         <span class="text">{{nestedCollection.node.name}}</span>
@@ -129,7 +129,7 @@
                 <app-cipher-row *ngFor="let noFolderCipher of noFolderCiphers" [cipher]="noFolderCipher"
                     title="{{'viewItem' | i18n}}" (onSelected)="selectCipher($event)"
                     (launchEvent)="launchCipher($event)" appFocus
-                    [focus]="navType === 'noFolder' && noFolderCiphers[navIndex] === noFolderCipher">
+                    [focus]="arrowNav.navType === 'noFolder' && noFolderCiphers[arrowNav.navIndex] === noFolderCipher">
                 </app-cipher-row>
             </div>
         </div>
@@ -161,7 +161,7 @@
                     <app-cipher-row *cdkVirtualFor="let searchedCipher of ciphers" [cipher]="searchedCipher"
                         title="{{'viewItem' | i18n}}" (onSelected)="selectCipher($event)"
                         (launchEvent)="launchCipher($event)" appFocus
-                        [focus]="navType === 'search' && ciphers[navIndex] === searchedCipher">
+                        [focus]="arrowNav.navType === 'searchCiphers' && ciphers[arrowNav.navIndex] === searchedCipher">
                     </app-cipher-row>
                 </div>
             </div>
