--- a/src/popup/vault/ciphers.component.html
+++ b/src/popup/vault/ciphers.component.html
@@ -1,4 +1,4 @@
-<header appArrowNav (navDown)="navDown()" (navUp)="navUp()" (navReset)="navReset()">
+<header appArrowNav (navDown)="arrowNav.down()" (navUp)="arrowNav.up()" (navReset)="arrowNav.reset()">
     <div class="left">
         <button type="button" appBlurClick (click)="back()">
             <span class="header-icon"><i class="fa fa-chevron-left" aria-hidden="true"></i></span>
@@ -18,7 +18,7 @@
     </div>
 </header>
 <content [ngClass]="{'stacked-boxes': showGroupings()}"
-    appArrowNav (navDown)="navDown()" (navUp)="navUp()" (navReset)="navReset()">
+    appArrowNav (navDown)="arrowNav.down()" (navUp)="arrowNav.up()" (navReset)="arrowNav.reset()">
     <ng-container *ngIf="showGroupings()">
         <div class="box list" *ngIf="nestedFolders && nestedFolders.length">
             <div class="box-header">
@@ -27,7 +27,7 @@
             <div class="box-content single-line">
                 <a *ngFor="let f of nestedFolders" href="#" class="box-content-row" appStopClick appBlurClick
                     (click)="selectFolder(f.node)" appFocus
-                    [focus]="navType === 'folders' && nestedFolders[navIndex] === f">
+                    [focus]="arrowNav.navType === 'folders' && nestedFolders[arrowNav.navIndex] === f">
                     <div class="row-main">
                         <div class="icon">
                             <i class="fa fa-fw fa-lg" aria-hidden="true"
@@ -46,7 +46,7 @@
             <div class="box-content single-line">
                 <a *ngFor="let c of nestedCollections" href="#" class="box-content-row" appStopClick appBlurClick
                     (click)="selectCollection(c.node)" appFocus
-                    [focus]="navType === 'collections' && nestedCollections[navIndex] === c">
+                    [focus]="arrowNav.navType === 'collections' && nestedCollections[arrowNav.navIndex] === c">
                     <div class="row-main">
                         <div class="icon"><i class="fa fa-fw fa-lg fa-cube" aria-hidden="true"></i></div>
                         <span class="text">{{c.node.name}}</span>
@@ -75,7 +75,7 @@
                 <div class="box-content">
                     <app-cipher-row *cdkVirtualFor="let c of ciphers" [cipher]="c" title="{{'viewItem' | i18n}}"
                         (onSelected)="selectCipher($event)" (launchEvent)="launchCipher($event)" appFocus
-                        [focus]="navType === 'ciphers' && ciphers[navIndex] === c">
+                        [focus]="arrowNav.navType === 'ciphers' && ciphers[arrowNav.navIndex] === c">
                     </app-cipher-row>
                 </div>
             </div>
